--- a/.config/sway/config
+++ b/.config/sway/config
@@ -16,7 +16,7 @@ set $right l
 # Your preferred terminal emulator
 set $term kitty
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu wofi --show drun --allow-images
 
 
 ### Idle configuration
@@ -212,7 +212,7 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
-    bindsym Print exec "/home/francohaute/.screenshot.sh"
+    bindsym Print exec "/home/francohaute/.wscreenshot.sh"
 
 #
 # Status Bar:
