--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,6 +18,13 @@ set $term kitty
 # Your preferred application launcher
 set $menu wofi --show drun --allow-images
 
+font pango:Noto Sans 10
+
+exec_always {
+    gsettings set org.gnome.desktop.interface gtk-theme "Breeze"
+    gsettings set org.gnome.desktop.interface icon-theme "breeze-dark" # Or just "Breeze" for icons
+    gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+}
 
 ### Idle configuration
 #
@@ -32,6 +39,9 @@ exec swayidle -w \
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 
+# Wallpaper
+output * background ~/Pictures/wallpaper.jpg fill
+
 ### Input configuration
 #
 # Example configuration:
@@ -43,7 +53,7 @@ input * {
 
 
 # Polkit
-exec usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec /usr/lib/polkit-kde-authentication-agent-1
 
 # Network manager applet
 exec nm-applet
